<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ff_controllers</name>
  <version>0.0.0</version>
  <description>Simple Controllers for the DISCOWER free-flyer platform</description>
  <maintainer email="jorisv@kth.se">joris997</maintainer>
  <license>MIT</license>

  <depend>px4_msgs</depend>
  <depend>mpc_msgs</depend>
  <depend>px4_offboard</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_tools</depend>
  <depend>tf_transformations</depend>
  
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>px4_msgs</test_depend>

  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
